css/style.css
h1 {
	display: block;
	color: Blue;
	font-weight: bold;
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;

}

h2 {
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;

}

.nav-container {
  display: flex;
}

.nav-container > div {
  margin-right: auto;
  color: black;
  background-color: rgba(255, 255, 255, 0.8);
  padding: 20px 1;
  text-decoration: none;
  font-size: 30px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.nav-container > a {
  margin:5px;
  color: black;
  background-color: rgba(255, 255, 255, 0.8);
  padding: 20px 1;
  text-decoration: none;
  font-size: 30px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.nav-container > a:hover {
  background-color: rgba(255, 255, 255, 0.8);
  padding: 20px 1;
  text-decoration: none;
  font-size: 30px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  border-bottom: 3px solid blue;
}
.nav-container > a:active {
  color: white;
  background-color: blue;
  padding: 20px 1;
  text-decoration: none;
  font-size: 30px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  border-bottom: 3px solid blue;
}
.nav-item-current {
  color: black;
  background-color: rgba(255, 255, 255, 0.8);
  padding: 20px 1;
  text-decoration: none;
  font-size: 30px;
  border-bottom: 3px solid blue;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
}

ul {
  list-style-type: none;
}

.picture {
border: 1px solid;
width: 100%; /*suggest a min-width & min-height*/
}


.pheader {
	margin-top: 50px
}

.container {
	display: grid;
	grid-gap: 20px;
	grid-template-columns: 1fr 1fr 1fr;
}

a.skip {
	position: relative;
	left: -1000px;
	top: auto;
	width: 1px;
	height: 1px;	
	overflow: hidden;
	display: block;
}

a.skip:focus {
	left: 500px;
	width: auto;
	height: auto;
}

